# Mater-trends

./: .env.example  .gitignore  CLAUDE.md  Journal-RSS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: refresh.yml
citations/acs-energy-lett/: 2024.json  2025.json  2026.json
citations/acs-macro-lett/: 2024.json  2025.json  2026.json
citations/acs-nano/: 2024.json  2025.json  2026.json
citations/acta-mater/: 2024.json  2025.json  2026.json
citations/adv-energy-mater/: 2024.json  2025.json  2026.json
citations/adv-funct-mater/: 2024.json  2025.json  2026.json
citations/adv-materials/: 2024.json  2025.json  2026.json
citations/angew-chem/: 2024.json  2025.json  2026.json
citations/biomacromolecules/: 2024.json  2025.json  2026.json
citations/ccs-chem/: 2024.json  2025.json  2026.json
citations/cell/: 2024.json  2025.json  2026.json
citations/chem-cell/: 2024.json  2025.json  2026.json
citations/chem-mater/: 2024.json  2025.json  2026.json
citations/commun-mater/: 2024.json  2025.json  2026.json
config/: journals.json  taxonomy.json  useless_keywords.json
docs/: index.html
mat_trend/: __init__.py  assign.py  backfill.py  candidates.py  citations.py  cli.py  curate_io.py  ingest.py  refresh.py  registry.py  rss.py  site.py  taxonomy.py  trends.py
scripts/: monthly_prompt.md  monthly_refresh.sh
tests/: test_assign.py  test_backfill.py  test_candidates.py  test_citations.py  test_cli.py  test_curate_io.py  test_ingest.py  test_integration.py  test_registry.py  test_rss.py  test_site.py  test_trends.py
(+239 files in other folders)
